--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <!--====== Title ======-->
     <title> RevelTek | Our Portfolio </title>
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="img/png" />
+    <link rel="icon" href="/assets/img/svg/swirl_white.svg" sizes="any">
     <!--====== Animate Css ======-->
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <!--====== Bootstrap css ======-->
