--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 							<h2 class="title">Professional Business <br> Guidance Agency </h2>
 						</div>
 						<p class="mb-25">
-							Sedut perspiciatis unde omnis iste natus error sit voluptat em accusantium doloremq
+							Welcome to Reveltek unde omnis iste natus error sit voluptat em accusantium doloremq
 							laudantium, totam raperiaeaque ipsa quae ab illo inventore veritatis et quasi
 						</p>
 						<p>
