--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 					<div class="about-text">
 						<div class="section-title left-border mb-40">
 							<span class="title-tag">About Us</span>
-							<h2 class="title">Professional Business <br> Guidance Agency </h2>
+							<h2 class="title">Technical Consulting <br> Guidance Agency </h2>
 						</div>
 						<p class="mb-25">
 							Welcome to Reveltek unde omnis iste natus error sit voluptat em accusantium doloremq
