--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
 						<div class="menu-items">
 							<ul>
 								<li class="has-submemu">
-									<a href="index.html">Home</a>
+									<a href="services.html">Services</a>
 									<ul class="submenu">
-										<li><a href="index.html">Home One</a></li>
-										<li><a href="index-2.html">Home Two</a> </li>
-										<li><a href="index-3.html">Home Three</a></li>
+										<li><a href="services-2.html">Services Two</a></li>
+										<li><a href="service-details.html">Service Details</a></li>
+										<li><a href="blog-grid.html">Blog Grid</a></li>
+										<li><a href="blog-details.html">Blog Details</a></li>
 									</ul>
 								</li>
 								<li class="has-submemu">
-									<a href="#">Pages</a>
+									<a href="#">Industries</a>
 									<ul class="submenu">
 										<li><a href="about.html">About us</a></li>
 										<li><a href="team.html">Our Team</a> </li>
@@ -87,34 +88,28 @@
 									</ul>
 								</li>
 								<li class="has-submemu">
-									<a href="services.html">Services</a>
+									<a href="index.html">Insights</a>
 									<ul class="submenu">
-										<li><a href="services-2.html">Services Two</a></li>
-										<li><a href="service-details.html">Service Details</a></li>
-									</ul>
-								</li>
-								<li class="has-submemu">
-									<a href="blog-grid.html">Blog</a>
-									<ul class="submenu">
+										<li><a href="index.html">Home One</a></li>
+										<li><a href="index-2.html">Home Two</a> </li>
+										<li><a href="index-3.html">Home Three</a></li>
 										<li><a href="blog-standard.html">Blog Standard</a></li>
-										<li><a href="blog-grid.html">Blog Grid</a></li>
-										<li><a href="blog-details.html">Blog Details</a></li>
 									</ul>
 								</li>
 								<li class="has-submemu">
-									<a href="portfolio.html">Portfolio</a>
-									<ul class="submenu">
-										<li><a href="portfolio-2.html">Portfolio Two</a></li>
-										<li><a href="portfolio-details.html">Portfolio Details</a></li>
-									</ul>
-								</li>
-								<li class="has-submemu">
-									<a href="shop.html">Shop</a>
+									<a href="shop.html">Careers</a>
 									<ul class="submenu">
 										<li><a href="shop.html">Shop</a></li>
 										<li><a href="product-details.html">Product Details</a></li>
 										<li><a href="cart.html">Cart</a></li>
 										<li><a href="checkout.html">Checkout</a></li>
+									</ul>
+								</li>
+								<li class="has-submemu">
+									<a href="portfolio.html">About Us</a>
+									<ul class="submenu">
+										<li><a href="portfolio-2.html">Portfolio Two</a></li>
+										<li><a href="portfolio-details.html">Portfolio Details</a></li>
 									</ul>
 								</li>
 								<li><a href="contact.html">Contact</a></li>
@@ -128,7 +123,7 @@
 					<div class="navbar-extra d-lg-block d-flex align-items-center">
 						<!-- Navbtn -->
 						<div class="navbar-btn nav-push-item">
-							<a class="main-btn main-btn-3" href="#">Consulting Now</a>
+							<a class="main-btn main-btn-3" href="#">Consulting With Us</a>
 						</div>
 						<!-- Navbar Toggler -->
 						<div class="navbar-toggler">
