--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<div class="navbar-extra d-lg-block d-flex align-items-center">
 						<!-- Navbtn -->
 						<div class="navbar-btn nav-push-item">
-							<a class="main-btn main-btn-3" href="#">Consulting With Us</a>
+							<a class="main-btn main-btn-3" href="#">Book a Consultant</a>
 						</div>
 						<!-- Navbar Toggler -->
 						<div class="navbar-toggler">
