--- a/index.html
+++ b/index.html
@@ -251,18 +251,18 @@
 					<div class="about-text">
 						<div class="section-title left-border mb-40">
 							<span class="title-tag">About Us</span>
-							<h2 class="title">Technical Consulting <br> Guidance Agency </h2>
+							<h2 class="title">RevelTek Is A Global <br> Consulting Firm </h2>
 						</div>
 						<p class="mb-25">
-							Welcome to Reveltek unde omnis iste natus error sit voluptat em accusantium doloremq
-							laudantium, totam raperiaeaque ipsa quae ab illo inventore veritatis et quasi
+							We are futurists who envision cutting-edge methods, practices, and industrial 
+							approaches to transform companies and communities for sustainability and automation.
 						</p>
 						<p>
-							Doloremque laudantium, totam raperiaeaque ipsa quae ab illo inventore veritatis et quasi
+							We are those who are passionate about the arts, crafts, and fine arts that society values.
 						</p>
 						<ul class="about-list">
-							<li> <i class="far fa-check"></i> Business & Consulting Agency</li>
-							<li> <i class="far fa-check"></i> Awards Winning Business Comapny</li>
+							<li> <i class="far fa-check"></i> A Global Consulting Firm</li>
+							<li> <i class="far fa-check"></i> Our Values Are Driving Our Culture</li>
 						</ul>
 						<a href="about.html" class="main-btn">Learn More</a>
 					</div>
