Changed dummy content of about section #8

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 							approaches to transform companies and communities for sustainability and automation.
 						</p>
 						<p>
-							We are those who are passionate about the arts, crafts, and fine arts that society values.
+							The fine arts and crafts that society appreciates are ones that we are passionate about.
 						</p>
 						<ul class="about-list">
 							<li> <i class="far fa-check"></i> A Global Consulting Firm</li>
