"Creative Idea" under issue#10

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 							<img src="assets/img/icons/01.png" alt="Icon">
 						</div>
 						<h3><a href="#">Creative Idea</a></h3>
-						<p>Sed ut perspiciatis unde omnis iste natus erro volupta</p>
+						<p>We innovate unique ideas to create Zen spaces for guests</p>
 						<a href="#" class="service-link">
 							<i class="fal fa-long-arrow-right"></i>
 						</a>
