"Business strategy" under issue#11

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 							<img src="assets/img/icons/02.png" alt="Icon">
 						</div>
 						<h3><a href="#">Business Strategy</a></h3>
-						<p>Sed ut perspiciatis unde omnis iste natus erro volupta</p>
+						<p>We stayed a people's priority by devising a wise vision</p>
 						<a href="#" class="service-link">
 							<i class="fal fa-long-arrow-right"></i>
 						</a>
