--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 							<img src="assets/img/icons/03.png" alt="Icon">
 						</div>
 						<h3><a href="#">Relationship Buildup</a></h3>
-						<p>Sed ut perspiciatis unde omnis iste natus erro volupta</p>
+						<p>We connect people to build partnerships and innovation</p>
 						<a href="#" class="service-link">
 							<i class="fal fa-long-arrow-right"></i>
 						</a>
