Watch Video, What We Do, Company Skills Content #8

--- a/index.html
+++ b/index.html
@@ -342,8 +342,7 @@
 							</h2>
 						</div>
 						<p>
-							Ranim ad minima veniam, quis nostrum exercitationem ullam corpsuscipit
-							laboriosam, nisi ut aliquid exea commodi consequa turuis autem
+							We work in partnership with businesses to understand their needs and clarify the scope of work. We do in-depth analysis and research.
 						</p>
 						<a href="#" class="main-btn">Need Any Project</a>
 					</div>
@@ -460,10 +459,10 @@
 						<div class="wcu-text">
 							<div class="section-title left-border mb-40">
 								<span class="title-tag">What We Do</span>
-								<h2 class="title">Why Choose Finsa <br> Business Agency</h2>
+								<h2 class="title">Why Choose Our <br> Consulting Firm</h2>
 							</div>
 							<p>
-								Sedut perspiciatis unde omnis iste natus evoluptat em accusantium doloremque laudantium
+								Our aim as a consulting firm is to unlock the potential of people who develop the world
 							</p>
 							<ul class="wcu-list">
 								<li>
@@ -670,14 +669,10 @@
 							<h2 class="title">We Have Experience <br> For Business Planning</h2>
 						</div>
 						<p>
-							Sedut perspiciatis unde omnis iste natus error sit voluptat em accusantium doloremque
-							laudantium, totam raperiaeaque ipsa quae ab illo inventore veritatis et quasi
+							A business plan describes your company. RevelTek can help with business and organizational purpose, helping you understand the power of purpose--and how to unleash it.
 						</p>
 						<p>
-							But I must explain to you how all this mistaken idenouncing pleasure and praising pain was
-							born and I will give completey account of the system, and expound the actual teachings of
-							the great explorer of the truth, the master-builder of human happiness one rejects,
-							dislikes, or avoid
+							Our Strategy & Analytics team creates bold visions and takes decisive action with the confidence that comes from leading insight. We architect strategies for growth transformation and value creation. We use digital innovation to unlock business value through the power of technology.
 						</p>
 
 						<a href="#" class="main-btn">Learn More</a>
