Updated the content according to the layout #8

--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
 							</h2>
 						</div>
 						<p>
-							We work in partnership with businesses to understand their needs and clarify the scope of work. We do in-depth analysis and research.
+							We work in partnership with businesses to understand their needs and 
+							clarify the scope of work. We do in-depth analysis and research.
 						</p>
 						<a href="#" class="main-btn">Need Any Project</a>
 					</div>
@@ -669,10 +670,14 @@
 							<h2 class="title">We Have Experience <br> For Business Planning</h2>
 						</div>
 						<p>
-							A business plan describes your company. RevelTek can help with business and organizational purpose, helping you understand the power of purpose--and how to unleash it.
+							A business plan describes your company. RevelTek can help with business and organizational 
+							purpose, helping you understand the power of purpose--and how to unleash it.
 						</p>
 						<p>
-							Our Strategy & Analytics team creates bold visions and takes decisive action with the confidence that comes from leading insight. We architect strategies for growth transformation and value creation. We use digital innovation to unlock business value through the power of technology.
+							Our Strategy & Analytics team creates bold visions and takes decisive action with the 
+							confidence that comes from leading insight. We architect strategies for growth 
+							transformation and value creation. We use digital innovation to unlock business 
+							value through the power of technology.
 						</p>
 
 						<a href="#" class="main-btn">Learn More</a>
