--- a/services-2.html
+++ b/services-2.html
@@ -188,7 +188,7 @@
                             <img src="assets/img/icons/02.png" alt="Icon">
                         </div>
                         <h3>Business Strategy</h3>
-                        <p>Quis autem velrepres hend</p>
+                        <p>Provide future visibility</p>
                         <a href="#" class="service-link">
                             <i class="fal fa-long-arrow-right"></i>
                         </a>
