Replaced the content as required

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 		<div class="container">
 			<div class="section-title text-center both-border mb-50">
 				<span class="title-tag"> Our Core Features </span>
-				<h2 class="title">We Are Specialist For Many <br> Business Solutions</h2>
+				<h2 class="title">Our Unique Organizational <br> Practices</h2>
 			</div>
 			<!-- Feature boxes -->
 			<div class="feature-boxes row justify-content-center">
@@ -380,7 +380,7 @@
 						</div>
 						<div class="feature-desc">
 							<a href="#" class="feature-link"><i class="fal fa-long-arrow-right"></i></a>
-							<h4>Free Consulting</h4>
+							<h4>Omni Spirit</h4>
 							<p>Join us for consultatoins</p>
 						</div>
 					</div>
@@ -391,7 +391,7 @@
 						</div>
 						<div class="feature-desc">
 							<a href="#" class="feature-link"><i class="fal fa-long-arrow-right"></i></a>
-							<h4>Business Growth</h4>
+							<h4>DreamWave</h4>
 							<p>Join us for consultatoins</p>
 						</div>
 					</div>
@@ -402,7 +402,7 @@
 						</div>
 						<div class="feature-desc">
 							<a href="#" class="feature-link"><i class="fal fa-long-arrow-right"></i></a>
-							<h4>IT Consulting</h4>
+							<h4>Tao Lifestyle</h4>
 							<p>Join us for consultatoins</p>
 						</div>
 					</div>
@@ -413,7 +413,7 @@
 						</div>
 						<div class="feature-desc">
 							<a href="#" class="feature-link"><i class="fal fa-long-arrow-right"></i></a>
-							<h4>Investment Plan</h4>
+							<h4>Timmsi Training</h4>
 							<p>Join us for consultatoins</p>
 						</div>
 					</div>
@@ -424,7 +424,7 @@
 						</div>
 						<div class="feature-desc">
 							<a href="#" class="feature-link"><i class="fal fa-long-arrow-right"></i></a>
-							<h4>Financial Planning</h4>
+							<h4>Curiosity Community</h4>
 							<p>Join us for consultatoins</p>
 						</div>
 					</div>
@@ -435,7 +435,7 @@
 						</div>
 						<div class="feature-desc">
 							<a href="#" class="feature-link"><i class="fal fa-long-arrow-right"></i></a>
-							<h4>Relationship</h4>
+							<h4>SILK Life</h4>
 							<p>Join us for consultatoins</p>
 						</div>
 					</div>
