--- a/services.html
+++ b/services.html
@@ -169,7 +169,7 @@
                         <!-- Section Title -->
                         <div class="section-title left-border mb-30">
                             <span class="title-tag">Working Process</span>
-                            <h2 class="title">How Dose We Works</h2>
+                            <h2 class="title">How Does We Works</h2>
                         </div>
                         <p>
                             Sedut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
