I have added a comma

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 							<h2 class="title">RevelTek Is A Global <br> Consulting Firm </h2>
 						</div>
 						<p class="mb-25">
-							We are futurists who envision cutting-edge methods, practices, and industrial 
+							We are futurists, who envision cutting-edge methods, practices, and industrial 
 							approaches to transform companies and communities for sustainability and automation.
 						</p>
 						<p>
@@ -277,7 +277,7 @@
 		<div class="container">
 			<!-- Section Title -->
 			<div class="section-title text-center both-border mb-30">
-				<span class="title-tag">Comany Services</span>
+				<span class="title-tag">Company Services</span>
 				<h2 class="title">We Provide Most Exclusive <br> Service For Business</h2>
 			</div>
 			<!-- Services Boxes -->
