Updated dummy content on Services #20

--- a/services.html
+++ b/services.html
@@ -172,8 +172,7 @@
                             <h2 class="title">How Does We Works</h2>
                         </div>
                         <p>
-                            Sedut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium
+                            We support and create an amazing technology solutions and business developments for our clients
                         </p>
                         <!-- process-loop -->
                         <div class="process-loop">
