--- a/services.html
+++ b/services.html
@@ -604,7 +604,7 @@
                                 <div class="icon">
                                     <img src="assets/img/icons/01.png" alt="Icon">
                                 </div>
-                                <h3><a href="#">Creative Idea</a></h3>
+                                <h3><a href="#">Cybersecurity</a></h3>
                                 <p>Sed perspicia unde omnis</p>
                                 <a href="#" class="service-link">
                                     <i class="fal fa-long-arrow-right"></i>
@@ -616,7 +616,7 @@
                                 <div class="icon">
                                     <img src="assets/img/icons/02.png" alt="Icon">
                                 </div>
-                                <h3><a href="#">Business Strategy</a></h3>
+                                <h3><a href="#">Product Management</a></h3>
                                 <p>Quis autem velrepres hend</p>
                                 <a href="#" class="service-link">
                                     <i class="fal fa-long-arrow-right"></i>
@@ -628,7 +628,7 @@
                                 <div class="icon">
                                     <img src="assets/img/icons/03.png" alt="Icon">
                                 </div>
-                                <h3><a href="#">Relationship</a></h3>
+                                <h3><a href="#">IT Consulting</a></h3>
                                 <p>Sed perspicia unde omnis</p>
                                 <a href="#" class="service-link">
                                     <i class="fal fa-long-arrow-right"></i>
@@ -640,7 +640,7 @@
                                 <div class="icon">
                                     <img src="assets/img/icons/04.png" alt="Icon">
                                 </div>
-                                <h3><a href="#">Productivity</a></h3>
+                                <h3><a href="#">Supply Chain</a></h3>
                                 <p>Quis autem velrepres hend</p>
                                 <a href="#" class="service-link">
                                     <i class="fal fa-long-arrow-right"></i>
